--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								<b>Research Interests:</b>
 							</p>
 							<p>
-								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/">Include ADS link!</a>
+								<b>Publications:</b> <a href="https://ui.adsabs.harvard.edu/search/q=orcid%3A0000-0003-3917-6460&sort=date+desc">ADS Link to Publications</a>
 							</p>
 						</article>
 
