--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						<article id="contact">
 							<h2 class="major">Contact</h2>
 							<p> 
-								<b>Email: kilarson@stsci.edu</b> 
+								<b>Email: </b> 
 							</p>
 							<p> 
 								<b>Address:</b> 
